--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: auth0_flutter2
-description: A Flutter package to easily integrate Auth0 into Android, iOS, and Web Flutter apps.
-version: 0.0.4
+description: Cross-platform Auth0 authentication integration, in minutes, for mobile and web.
+version: 0.0.6
 homepage:
 repository: https://github.com/apogee23/auth0_flutter2
 
@@ -16,6 +16,9 @@ dependencies:
   universal_html: ^2.0.8
   meta: ^1.2.4
   js: ^0.6.3
+
+  # Used to ensure callback URI can be successfully captured and processed.
+  url_strategy: ^0.2.0
 
 dev_dependencies:
   flutter_test:
